tests/ui/restrictions/impl-restriction.stderr
error: implementation of restricted trait
  --> $DIR/impl-restriction.rs:11:1
   |
LL | impl foo::bar::Foo for u8 {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: trait restricted here
  --> $DIR/impl-restriction.rs:5:20
   |
LL |         pub(crate) impl(super) trait Foo {}
   |                    ^^^^^^^^^^^

error: aborting due to previous error

